ch8-kyverno-k8s/examples/test/3-test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
  namespace: policy-test
  labels:
    app: test
    owner: jimmy
    canremove: "true"
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: test
        owner: jimmy
        env: dev
    spec: # Pod specification
      # serviceAccount: admission-test
      # serviceAccountName: admission-test
      containers:
      - name: test
        image: registry.k8s.io/pause:3.9
        imagePullPolicy: Always
        securityContext:  
          allowPrivilegeEscalation: false  
          runAsUser: 1000  
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]  
          seccompProfile:
            type: "RuntimeDefault" 
        ports:
        - containerPort: 8080
        # resources:  
        #   limits:  
        #     cpu: 200m  
        #     memory: 20Mi  
        #   requests:  
        #     cpu: 100m  
        #     memory: 10Mi  
        # readinessProbe:
        #   tcpSocket:
        #     port: 8080
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
        # livenessProbe:
        #   tcpSocket:
        #     port: 8080
        #   initialDelaySeconds: 15
        #   periodSeconds: 20
        volumeMounts:
          - mountPath: /tmp
            name: tmp
      # - name: test2
      #   image: k8s.gcr.io/pause:3.9
      #   imagePullPolicy: Always
      #   securityContext:  
      #     allowPrivilegeEscalation: false  
      #     runAsUser: 1000  
      #     readOnlyRootFilesystem: true
      #     runAsNonRoot: true
      #     capabilities:
      #       drop: ["ALL"]  
      #     seccompProfile:
      #       type: "RuntimeDefault" 
      #   ports:
      #   - containerPort: 8081
      #   resources:  
      #     limits:  
      #       cpu: 200m  
      #       memory: 20Mi  
      #     requests:  
      #       cpu: 100m  
      #       memory: 10Mi  
      #   readinessProbe:
      #     tcpSocket:
      #       port: 8081
      #     initialDelaySeconds: 5
      #     periodSeconds: 10
      #   livenessProbe:
      #     tcpSocket:
      #       port: 8081
      #     initialDelaySeconds: 15
      #     periodSeconds: 20
      #   volumeMounts:
      #     - mountPath: /tmp
      #       name: tmp
      volumes:
      - name: tmp
        emptyDir: {}
