ch8-kyverno-k8s/examples/test/4-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: policy-test
  labels:
    app: test
spec:
  containers:
    - name: test
      image: registry.k8s.io/pause:3.9
      imagePullPolicy: Always
      securityContext:  
        allowPrivilegeEscalation: false  
        runAsUser: 1000  
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        capabilities:
          drop: ["ALL"]  
        seccompProfile:
          type: "RuntimeDefault"
    # - name: test2
    #   image: k8s.gcr.io/pause:3.9
    #   imagePullPolicy: Always
    #   securityContext:  
    #     allowPrivilegeEscalation: false  
    #     runAsUser: 1000  
    #     readOnlyRootFilesystem: true
    #     runAsNonRoot: true
    #     capabilities:
    #       drop: ["ALL"]  
    #     seccompProfile:
    #       type: "RuntimeDefault"
