ch8-kyverno-k8s/examples/test/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-bad
  namespace: policy-test
  labels:
    app: test-bad
spec:
  containers:
    - name: test
      image: k8s.gcr.io/pause:3.9
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-good
  namespace: policy-test
  labels:
    app: test-good
spec:
  containers:
    - name: test
      image: registry.k8s.io/pause:3.9
